Fixed header alignment bug

--- a/css/master.css
+++ b/css/master.css
@@ -75,9 +75,11 @@ article header h2 {
     font-family: "Proxima Nova Bold";
     font-size: 14px;
     float: right;
+    margin: 0;
 }
 article div {
     clear: both;
+    padding: 20px 0 0 0;
 }
 article div a {
     border-bottom: 1px #d4d4d4 dotted;
